--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -41,4 +42,6 @@ dependencies {
 //    implementation 'com.github.bumptech.glide:glide:4.14.2'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
+    implementation platform('com.google.firebase:firebase-bom:32.1.1')
+    implementation 'com.google.firebase:firebase-analytics'
 }
